# ChangeLog for www-servers/tomcat
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/www-servers/cvs-repo/gentoo-x86/www-servers/tomcat/ChangeLog,v 1.218 2009/07/03 11:02:15 ali_bush Exp $

*tomcat-6.0.20-r1 (03 Jul 2009)

  03 Jul 2009; Alistair Bush <ali_bush@gentoo.org> +tomcat-6.0.20-r1.ebuild:
  Bump to fix bug #276059.  Thanks to weisso.

  27 Jun 2009; Alex Legler <a3li@gentoo.org> tomcat-6.0.20.ebuild:
  amd64 stable, security bug 272566.

  27 Jun 2009; Brent Baude <ranger@gentoo.org> tomcat-6.0.20.ebuild:
  Marking tomcat-6.0.20 ppc64 and ppc for bug 272566

  25 Jun 2009; Christian Faulhammer <fauli@gentoo.org> tomcat-6.0.20.ebuild:
  stable x86, security bug 272566

*tomcat-6.0.20 (17 Jun 2009)

  17 Jun 2009; Petteri Räty <betelgeuse@gentoo.org> +tomcat-6.0.20.ebuild:
  Version bump for bug #273931. Fixes multiple security issue (bug #272566
  and bug #273566).

  29 Mar 2009; Petteri Räty <betelgeuse@gentoo.org>
  -tomcat-5.5.27-r1.ebuild, -tomcat-5.5.27-r2.ebuild,
  -tomcat-6.0.18-r1.ebuild, -tomcat-6.0.18-r2.ebuild:
  Remove revisions with a security problems.

  18 Mar 2009; Brent Baude <ranger@gentoo.org> tomcat-6.0.18-r3.ebuild:
  Marking tomcat-6.0.18-r3 ppc for bug 261469

  18 Mar 2009; Brent Baude <ranger@gentoo.org> tomcat-6.0.18-r2.ebuild:
  stable ppc, bug 255469

  11 Mar 2009; Brent Baude <ranger@gentoo.org> tomcat-6.0.18-r3.ebuild:
  Marking tomcat-6.0.18-r3 ppc64 for bug 261469

  07 Mar 2009; Markus Meier <maekke@gentoo.org> tomcat-5.5.27-r3.ebuild,
  tomcat-6.0.18-r3.ebuild:
  amd64/x86 stable, bug #261469

*tomcat-6.0.18-r3 (06 Mar 2009)
*tomcat-5.5.27-r3 (06 Mar 2009)

  06 Mar 2009; Petteri Räty <betelgeuse@gentoo.org>
  +files/5.5/examples-cal.patch, +files/6/examples-cal.patch,
  +tomcat-5.5.27-r3.ebuild, +tomcat-6.0.18-r3.ebuild:
  Add patch for XSS issue in examples for security bug #261460. Use use deps
  in 5.5.
