@@ -11,11 +11,9 @@ AUX 6/examples-cal.patch 565 RMD160 85294480f354eb19340bdc7357690ae55ef5a89f SHA
 AUX 6/tomcat.conf 2895 RMD160 36ece62ddff5257c04f47d75b9c77bd4dc198652 SHA1 8fef42463b7bf186e2f1d1aeb083bdb370603265 SHA256 b04b085618be755ad9e1796fcbcbb8c2e192eefda3b240f1c06b0d9cc88f2ff0
 AUX 6/tomcat.init 3529 RMD160 45aabac31804faff713ca3648f4a675e5ea7ea89 SHA1 f2b499fda69d83aecda72742f88ed8bf64f5cfb3 SHA256 744daa31e36e548f76f2997c3e3430b961163bfe0d2ba2ef6d81f5c2ddb0470c
 DIST apache-tomcat-5.5.27-src.tar.gz 7382057 RMD160 8114fa3be19fd28a5d2d0d7e7087f6d82e0f111f SHA1 c6217d78d2e64fa839a30372bd2724ba75030c14 SHA256 90bc8abcddda604e855c37035653b1e24b31c2f09b7a29235e92d65025f7a334
-DIST apache-tomcat-6.0.18-src.tar.gz 3484249 RMD160 ef85db0d65a4f3bdd3ca821420d06535050b6a93 SHA1 9182b0d6b2d0cb2d60f04be6211f3b3516bc518e SHA256 f5ad5dd12e221d75e25234ca734fb434cf45f3fcea93623232a73dc9bfd03dc4
 DIST apache-tomcat-6.0.20-src.tar.gz 3590562 RMD160 65b1b56132c03855e352e44a24b761bccd65b90c SHA1 ab538484d8d05c83a69c70ab6bf07606282633d8 SHA256 e8f709f0aeda8e164362144aca253249f050bc330e622dbb4196434db9933298
 EBUILD tomcat-5.5.27-r3.ebuild 11069 RMD160 d9c95564e67d1bc56f047f40ed5549214fb9637c SHA1 b964b523482df1326784bf2abaae5d411797bc06 SHA256 51865974bfc0df017966b895fb286fae8ac3d1aaeedb04fe19eed64d28082bf2
-EBUILD tomcat-6.0.18-r3.ebuild 6406 RMD160 9de624d68107f5e1ee997ed36b4d2145837e51a6 SHA1 d2f7419b263539b6c56091c53d07af366eb629d5 SHA256 a36febf0d1ab039bd7a18bd1b2313d57cad019e1e86b997f6ccffae729d034f0
 EBUILD tomcat-6.0.20-r1.ebuild 6899 RMD160 14a5a13cdb09935cc9ba353f5cf7eb761f655a1f SHA1 5fd5dbc255a61b5f19a0c4eae71e719a478010da SHA256 33046ec344113795237a5bdccf233e6cf4f8af0c887ff516ec74a58e5fb5d113
 EBUILD tomcat-6.0.20.ebuild 6790 RMD160 19b0a9b7ce9b0764ccf2e3f0355a11744bb6434b SHA1 8a2b1bd20a099b97bfb50d7658ed5db99a0482b8 SHA256 b8868770240026c71773b8e3d63469ee6a71fe621e1d0751e867f5c513d4b5f2
-MISC ChangeLog 57811 RMD160 9ab9fd5b01c71ee53e06222243ed041ab5167121 SHA1 f50790815d741b0abe24e8f47de83b0ff0ea469a SHA256 dd6844f5b1cafac17ec16c98f52d2e265e16d1b31b97314f8c505b74fcb2d2d9
+MISC ChangeLog 57943 RMD160 4aeb1b3e52fafcc956c540169da98aa1a33e6ca8 SHA1 32d5898a948db689f52557310b70bbce6c166dc9 SHA256 252681f2a0f3f92f10b98e98f8e37a0eff0b6ca0c5afdd4bd7e5da11dd4bf40a
 MISC metadata.xml 658 RMD160 db94c7bc6ba622acfe88f970aa7d2e6fa1718a2a SHA1 aa25178fefb68df9dee7d8fc0d925a2fbbb655dd SHA256 5ddc2743ca9e3ec0bef7983248a9c8eda9238425288efb3acdecc8a828714bd8
