@@ -1,6 +1,9 @@
 # ChangeLog for www-servers/tomcat
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-servers/cvs-repo/gentoo-x86/www-servers/tomcat/ChangeLog,v 1.218 2009/07/03 11:02:15 ali_bush Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-servers/cvs-repo/gentoo-x86/www-servers/tomcat/ChangeLog,v 1.219 2009/07/03 11:14:25 ali_bush Exp $
+
+  03 Jul 2009; Alistair Bush <ali_bush@gentoo.org> -tomcat-6.0.18-r3.ebuild:
+  Remove revision with security problems. see #272566
 
 *tomcat-6.0.20-r1 (03 Jul 2009)
 
